fix: (sfui2-557) tabs improvements (#522)
* fix: layout bugs

* feat: adjust arrow styling and fix in scrollable

* fix: remove arrow key support

* fix: add refresh on window resize

--- a/packages/sfui/frameworks/sass/components/VsfTabs.scss
+++ b/packages/sfui/frameworks/sass/components/VsfTabs.scss
@@ -5,8 +5,20 @@
     @apply bg-white border-none rounded-none ring-0 shadow-none;
   }
 
+  & .vsf-scrollable__nav {
+    @apply h-full;
+
+    &.vsf-scrollable__nav-prev {
+      @apply left-0;
+    }
+
+    &.vsf-scrollable__nav-next {
+      @apply right-0;
+    }
+  }
+  
   & .vsf-scrollable__container {
-    @apply pb-0;
+    @apply pb-0 mb-0 gap-0;
 
     & > .vsf-button {
       @apply w-auto whitespace-nowrap;
@@ -14,7 +26,19 @@
   }
 
   &-item.vsf-button {
-    @apply text-gray-500 rounded-b-none border-b-4 border-transparent;
+    @apply rounded-b-none border-b-4 border-transparent text-gray-500;
+
+    &--sm {
+      @apply border-b-2 pb-1;
+    }
+
+    &--base {
+      @apply pb-1;
+    }
+
+    &--lg {
+      @apply pb-2;
+    }
   }
 
   &-item--active.vsf-button:not(.vsf-button--disabled) {
